# Tool-kit

./: .gitignore  README.md  build.ps1  build.sh  pyproject.toml  requirements.txt
.atl/: conventions.md  skill-registry.md
scripts/: bump_version.py  generate_version_info.py
sdd/driver-backup/: explore.md  testing-capabilities.yaml
sdd/driver-backup-base/: proposal.md
src/driver_backup/: __init__.py  app.py  cli.py
src/driver_backup/services/: backup.py  base.py  mock.py  windows.py
src/driver_backup/ui/: backup.py  home.py  restore.py  settings.py
src/driver_backup/utils/: config.py  logger.py  permissions.py
tests/: __init__.py  test_cli.py  test_config.py  test_services.py  test_tui.py
